<resources>
    <string name="app_name">EveryWhereTrip</string>
    <string name="unknow_error">未知错误</string>
    <string name="conn_error">连接失败</string>
    <string name="conn_timeout">连接超时</string>
    <string name="net_error">网络错误</string>
    <string name="parse_error">解析异常</string>
    <string name="net_unused">当前网络不可用</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send_again">重新发送(10s)</string>
    <string name="send_newAgain">重新发送</string>
    <string name="input_code">请输入验证码</string>
    <string name="wait_please">请稍后...</string>
    <string name="login_phone">请输入手机号</string>
    <string name="login_Bangmi">请登录伴米旅行</string>
    <string name="hello_server">你好,为了获取跟好的服务</string>
    <string name="send_code">发送验证码</string>
    <string name="login_qq">QQ登录</string>
    <string name="login_wechar">微信登录</string>
    <string name="login_webo">微博登录</string>
    <string name="login_okbangmi">登录或注册即同意伴米旅行用户协议</string>
    <string name="oauth_error">失败了</string>
    <string name="oauth_cancel">取消了</string>
    <string name="oauth_ok">成功了</string>
    <string name="login_success">登陆成功</string>
    <string name="login_fail">登录失败</string>
    <string name="compile">编辑</string>
    <string name="wallet">我的钱包</string>
    <string name="no_signature">没有设置签名</string>
    <string name="touist">游客</string>
    <string name="unit">元</string>
    <string name="money">0.00</string>
    <string name="bonus">赢取奖金</string>
    <string name="coupon">我的卡券</string>
    <string name="journey">已购行程</string>
    <string name="collect">我的收藏</string>
    <string name="attention">我的关注</string>
    <string name="service">联系客服</string>
    <string name="feedback">意见反馈</string>
    <string name="versions">版本检测</string>
    <string name="message">个人信息</string>
    <string name="approach">获取途径</string>
    <string name="head">头像</string>
    <string name="name">用户昵称</string>
    <string name="username">伴小米</string>
    <string name="sexs">性别</string>
    <string name="sex">保密</string>
    <string name="signature">四肢不全五体不齐</string>
    <string name="signatures">个性签名</string>
    <string name="psw">修改密码</string>
    <string name="phone">绑定手机</string>
    <string name="exit_login">退出登录</string>
    <string name="home">首页</string>
    <string name="app_rice">伴米</string>
    <string name="out">完成</string>
    <string name="send_name">修改昵称</string>
    <string name="mEtsize">27/27</string>
    <string name="no">取消</string>
    <string name="man">男</string>
    <string name="lady">女</string>
    <string name="secrecy">保密</string>
    <string name="photo">相册</string>
    <string name="camera">相机</string>
    <string name="myPhoto">个人头像</string>
    <string name="experience">立即体验</string>
    <string name="guide01">严选当地人的私藏路线</string>
    <string name="guide02">智能语音实时导览</string>
    <string name="guide03">智能地图为你指路</string>
    <string name="collects">收藏</string>
    <string name="Okcollects">已收藏</string>
    <string name="OkAttention">已关注</string>
    <string name="Attention">未关注</string>
    <string name="share">分享</string>
    <string name="cost">¥</string>
    <string name="details">查看全部评论</string>
    <string name="withdetails">伴米详情</string>
    <string name="Start_Details">开始线路</string>
    <string name="allComment">所有评论</string>
    <string name="preview">预览线路</string>
    <string name="Now">刚刚</string>
    <string name="AllState">所有状态</string>
    <string name="send_state">上传了一条动态</string>
    <string name="update_voice">更新了一条语音</string>
</resources>
