<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="@dimen/dp_6">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/rl_tit"
                android:layout_width="@dimen/dp_288"
                android:layout_height="@dimen/dp_71"
                android:layout_marginLeft="@dimen/dp_12"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_21">

                <ImageView
                    android:id="@+id/mIv"
                    android:layout_width="@dimen/dp_70"
                    android:layout_height="@dimen/dp_70"
                    android:src="@mipmap/ee" />

                <TextView
                    android:id="@+id/mTv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_13"
                    android:layout_marginTop="@dimen/dp_5"
                    android:layout_toRightOf="@id/mIv"
                    android:text="@string/touist"
                    android:maxEms="4"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:textColor="@color/c_333"
                    android:textSize="@dimen/sp_22" />

                <TextView
                    android:id="@+id/mTv_signature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/mTv_name"
                    android:layout_marginLeft="@dimen/dp_13"
                    android:layout_marginTop="@dimen/dp_8"
                    android:layout_toRightOf="@id/mIv"
                    android:maxEms="6"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:text="@string/no_signature"
                    android:textColor="@color/c_999"
                    android:textSize="@dimen/sp_12" />

                <TextView
                    android:id="@+id/mTv_compile"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp_17"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:text="@string/compile"
                    android:textColor="@color/c_FA6A13"
                    android:textSize="@dimen/sp_14" />

                <ImageView
                    android:layout_width="@dimen/dp_15"
                    android:layout_height="@dimen/dp_15"
                    android:layout_alignParentBottom="true"
                    android:layout_marginRight="@dimen/dp_5"
                    android:layout_toLeftOf="@id/mTv_compile"
                    android:src="@drawable/icon_me_bianji" />

            </RelativeLayout>

            <android.support.v7.widget.CardView
                android:id="@+id/rl_money"
                android:layout_below="@id/rl_tit"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_37"
                android:layout_marginRight="@dimen/dp_10"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_122">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/rl_tit"
                    android:background="@drawable/back_change">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/dp_17"
                        android:layout_marginLeft="@dimen/dp_10"
                        android:layout_marginTop="@dimen/dp_8"
                        android:text="@string/wallet"
                        android:textColor="@color/c_ffffff"
                        android:textSize="@dimen/sp_14" />

                    <TextView
                        android:id="@+id/mTv_money"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/money"
                        android:textColor="@color/c_ffffff"
                        android:textSize="@dimen/sp_58" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@id/mTv_money"
                        android:layout_centerInParent="true"
                        android:layout_marginBottom="@dimen/dp_10"
                        android:layout_toRightOf="@id/mTv_money"
                        android:text="@string/unit"
                        android:textColor="@color/c_ffffff"
                        android:textSize="@dimen/sp_14" />

                    <ImageView
                        android:id="@+id/img_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginRight="@dimen/dp_10"
                        android:layout_marginBottom="@dimen/dp_12"
                        android:src="@drawable/little_right_arrow" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/dp_17"
                        android:layout_alignParentBottom="true"
                        android:layout_marginRight="@dimen/dp_5"
                        android:layout_marginBottom="@dimen/dp_12"
                        android:layout_toLeftOf="@id/img_no"
                        android:text="@string/bonus"
                        android:textColor="@color/c_ffffff" />

                </RelativeLayout>

            </android.support.v7.widget.CardView>




            <android.support.v7.widget.CardView
                android:id="@+id/m_card"
                app:cardCornerRadius="@dimen/dp_15"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_212"
                android:layout_below="@id/rl_money"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_19"
                android:layout_marginRight="@dimen/dp_10">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:id="@+id/coupon"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_10"
                        android:layout_marginRight="@dimen/dp_10"
                        android:layout_weight="1"
                        android:gravity="center_vertical">

                        <ImageView
                            android:id="@+id/img_kaquan"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/dp_17"
                            android:src="@drawable/icon_me_kaquan" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/dp_10"
                            android:layout_toRightOf="@id/img_kaquan"
                            android:text="@string/coupon"
                            android:textColor="@color/c_333"
                            android:textSize="@dimen/sp_14" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:src="@mipmap/right_arrow" />

                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_1"
                        android:layout_marginLeft="@dimen/dp_10"
                        android:layout_marginRight="@dimen/dp_10"
                        android:background="@color/c_f0" />

                    <RelativeLayout
                        android:id="@+id/journey"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_10"
                        android:layout_marginRight="@dimen/dp_10"
                        android:layout_weight="1"
                        android:gravity="center_vertical">

                        <ImageView
                            android:id="@+id/img_journey"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/dp_17"
                            android:src="@drawable/icon_me_yigou" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/dp_10"
                            android:layout_toRightOf="@id/img_journey"
                            android:text="@string/journey"
                            android:textColor="@color/c_333"
                            android:textSize="@dimen/sp_14" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:src="@mipmap/right_arrow" />

                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_1"
                        android:layout_marginLeft="@dimen/dp_10"
                        android:layout_marginRight="@dimen/dp_10"
                        android:background="@color/c_f0" />

                    <RelativeLayout
                        android:id="@+id/collect"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_10"
                        android:layout_marginRight="@dimen/dp_10"
                        android:layout_weight="1"
                        android:gravity="center_vertical">

                        <ImageView
                            android:id="@+id/img_collect"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/dp_17"
                            android:src="@drawable/icon_me_shoucang" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/dp_10"
                            android:layout_toRightOf="@id/img_collect"
                            android:text="@string/collect"
                            android:textColor="@color/c_333"
                            android:textSize="@dimen/sp_14" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:src="@mipmap/right_arrow" />

                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_1"
                        android:layout_marginLeft="@dimen/dp_10"
                        android:layout_marginRight="@dimen/dp_10"
                        android:background="@color/c_f0" />

                    <RelativeLayout
                        android:id="@+id/attention"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/dp_10"
                        android:layout_marginRight="@dimen/dp_10"
                        android:layout_weight="1"
                        android:gravity="center_vertical">

                        <ImageView
                            android:id="@+id/img_attention"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/dp_17"
                            android:src="@drawable/icon_me_guanzhu" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/dp_10"
                            android:layout_toRightOf="@id/img_attention"
                            android:text="@string/attention"
                            android:textColor="@color/c_333"
                            android:textSize="@dimen/sp_14" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:src="@mipmap/right_arrow" />

                    </RelativeLayout>


                </LinearLayout>

            </android.support.v7.widget.CardView>

            <RelativeLayout
                android:id="@+id/rll"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_18"
                android:layout_below="@id/m_card"
                android:layout_marginLeft="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_13">

                <LinearLayout
                    android:id="@+id/service"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/img_service"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/icon_me_kefu" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/dp_14"
                        android:text="@string/service"
                        android:textColor="@color/c_333"
                        android:textSize="@dimen/sp_12" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/feedback"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/img_feedback"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/icon_me_ziliao" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/dp_14"
                        android:text="@string/feedback"
                        android:textColor="@color/c_333"
                        android:textSize="@dimen/sp_12" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/versions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/img_versions"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/icon_me_banben" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/dp_14"
                        android:text="@string/versions"
                        android:textColor="@color/c_333"
                        android:textSize="@dimen/sp_12" />

                </LinearLayout>

            </RelativeLayout>

            <TextView
                android:id="@+id/mTv_version"
                android:gravity="center"
                android:layout_marginTop="@dimen/dp_5"
                android:layout_below="@id/rll"
                android:text="@string/send_again"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>